# t3tris

./: .gitignore  404.html  index.html  readme.md
.github/workflows/: build-docker-image.yml  deploy-ghpage.yml  deploy.yml  xxxdeploy.yml
assets/: ClientTetris-BlTzxwYU.js  ClientTetris-C3Hz5_Bq.js  ClientTetris-CKcAKz96.js  ClientTetris-DidF9mAH.js  ClientTetris-Dm3RJHDZ.js  ClientTetris-DmX7tOjY.js  ClientTetris-kaDMEsh_.js  ClientTetris-rnsOLkZH.js  MobileButton-1Ypchl-j.js  MobileButton-BoUT2dlX.js  MobileButton-CGUdo54K.js  MobileButton-CLxMrHP4.js  MobileButton-D7NuM8PD.js  MobileButton-DDOThao3.js  MobileButton-UlDm61eK.js  MobileButton-ulhEZ7cn.js  Perf--G-EYcjN.js  Perf-56Q5sRXT.js  Perf-CBaZKfPo.js  Perf-CQ9XZ7UZ.js  Perf-DDeaUG51.js  Perf-DgYVPmW7.js  Perf-DxiCioXT.js  Perf-ck5EojeO.js  Room2Page-4uiF1UNd.js  Room2Page-CfLwvetO.js  Room2Page-CpTZ2EqC.js  Room2Page-DH7wG0M3.js  Room2Page-DflvptB2.js  Room2Page-Drqhsd2D.js  RoomPage-Bp-ijW_O.js  RoomPage-DoGCQ73o.js  RoomSinglePage-23e-DRIH.js  RoomSinglePage-BE2RWWtc.js  RoomSinglePage-BytdOOBm.js  RoomSinglePage-C0wopu2Q.js  RoomSinglePage-Cr2rbqYg.js  RoomSinglePage-CtB1MWDA.js  RoomSinglePage-FbxSeaH4.js  RoomSinglePage-ktxylBCU.js  (+50 more)
back/: .dockerignore  Cargo.toml  build_docker_api.bash  build_docker_ws.bash  readmd.md
back/.sqlx/: query-475bb8e8670fc92b56d9497a61c95fbe44448b6c19c8d7f6a916c47f8b37b255.json  query-7196c7e783c18a0193476dbfc8158ae81f97b6e58a7efb2a8d1fa4f31ea15911.json  query-724e08fab656855c2b5fdc8df801a47bc9cda3433fb5bb070e3d71576c3ff5ff.json  query-989b16ab2aeaa3aa18c62b4b9d6f9911e02d6dcda4e777a4f30e307b6b06ee70.json  query-9a54d0a13bc616a60a96ace5504c9f546ff1e1ed367ff0682c5ac639408cbc20.json  query-b7dba7f8330d77758a4ee57810cd19d9a4bc397ca5fae6292e442a4651b274c4.json  query-b9ff86d7891b7e6e608690978c8f52813b62bafdb7b36022be8d236fdf0ed85b.json
back/api/: .env  .gitignore  Cargo.toml  Dockerfile  Settings.toml  run_dev.bash
back/api/migrations/: game.sql  user.sql
back/api/src/: constant.rs  error.rs  lib.rs  main.rs
back/api/src/app/: config.rs  db.rs  jwt.rs  mod.rs  redis.rs  state.rs
back/api/src/controller/: auth.rs  mod.rs  test.rs  user.rs
back/api/src/controller_ws/: mod.rs  room.rs  test.rs  ws.rs
back/api/src/dto/response/: auth.rs
back/api/src/extractor/: check_access_token.rs  db.rs  mod.rs  redis.rs  x_forwarded_for.rs
back/api/src/into_response/: error.rs  html_template.rs  mod.rs
back/api/src/middleware/: error_wrap.rs  mod.rs
back/api/src/repository/: session.rs  user.rs
back/api/src/service/: auth.rs
back/api/src/util/: config.rs  cookie.rs  hash.rs  http_client.rs  jwt.rs  mod.rs  oauth2.rs
back/api/templates/pages/: auth.html
back/common/: .env  Cargo.toml
back/common/src/: error.rs  lib.rs  tracing.rs
back/common/src/app_state/: init.rs  mod.rs
back/common/src/config/: mod.rs
back/common/src/dto/request/: auth.rs
back/common/src/dto/response/: auth.rs  mod.rs  user.rs
back/common/src/entity/: game_room_backup.rs  mod.rs  session.rs  user.rs
back/common/src/extractor/: check_access_token.rs  db.rs  redis.rs  x_forwarded_for.rs
back/common/src/into_response/: error.rs
back/common/src/jwt/: mod.rs
back/common/src/repository/: game_room_backup.rs  session.rs  user.rs
back/common/src/util/: config.rs  dbtx.rs  hash.rs  jwt.rs  mod.rs  time.rs
back/tetris/: Cargo.toml
back/tetris-lib/: .gitignore  Cargo.toml  readmd.md  wasm_pkg_build.bash
back/tetris-lib/examples/: demo.rs
back/tetris-lib/src/: lib.rs  tests.rs  wasm.rs
back/tetris/src/: tests.rs
back/timer/: Cargo.toml
back/timer/src/: main.rs
back/ws/: .gitignore  Cargo.toml  Dockerfile  Settings.toml  run_dev.bash
back/ws/src/: constant.rs  inmemory_pubsub.rs  lib.rs  macros.rs  main.rs  ws_topic.rs  ws_world.rs
back/ws/src/app/: mod.rs  state.rs
back/ws/src/controller/: mod.rs  test.rs  ws.rs
back/ws/src/model/: client_to_server_ws_msg.rs  mod.rs  msg.rs  room.rs  server_to_client_ws_msg.rs  ws.rs
back/ws/src/model/ws_msg/: client_to_server_ws_msg.rs  mod.rs  server_to_client_ws_msg.rs
back/ws/src/model/ws_world/: mod.rs  ws_topic.rs
back/ws/src/old/: model_room.rs  process_client_msg.rs  redisws.rs  room.rs
back/ws/src/service/: mod.rs  process_client_msg.rs  room.rs  ws.rs
back/ws/src/service/ws_world/: room.rs
back/ws/src/util/: redis.rs
back/ws/src/ws_world/: command.rs  connections.rs  game.rs  lobby.rs  mod.rs  model.rs  pubsub.rs  room.rs  util.rs  ws.rs
back/ws/src/ws_world/game/: action.rs  mod.rs  model.rs  tetris.rs  tick.rs
back/ws/src/ws_world/game/tetris/: mod.rs  multi_40_line.rs  tetris.rs
back/ws/src/ws_world/game2/: action.rs  mod.rs  model.rs  tetris.rs  tick.rs
docker-compose/: readme.md
docker-compose/t2ris-app/: .env  docker-compose.yml
docker-compose/t2ris-infra/: .env  docker-compose.yml  readmd.md
docker-compose/t3ris-app/: .env  docker-compose.yml
docker-compose/t3ris-infra/: .env  docker-compose.yml  readmd.md
docker-compose/t3ris-infra/nginx/: forchallenge.conf  nginx.dev.conf  nginx.prod.conf  readmd.md
front/: .dockerignore  .env  .env.development  .env.production  .gitignore  Dockerfile  README.md  build_docker_front.bash  build_ghpage.bash  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx  main.tsx
front/src/api/: auth.ts  test.ts  user.ts
front/src/component/: CanvasR3f.tsx  LoginModal.tsx  MobileButton.tsx  WebSocketInitializer.tsx
front/src/hooks/: useWindowSize.tsx  useWsGameActoinSender.tsx
front/src/layout/: DefaultLayout.tsx  MultiPlayLayout.tsx
front/src/page/: HomePage.tsx  MultiPlayRoomListPage.tsx  MultiPlayRoomPage.tsx  Room2Page.tsx  RoomPage.tsx  RoomSinglePage.tsx  SinglePlayPage.tsx  TestPage.tsx  XHomePage.tsx
front/src/store/: useAuthStore.ts  useClientPredicateStore.ts  useGameStore.ts  useLobbyStore.ts  useRoomListStore.ts  useRoomStore.ts  useUserStore.ts  useWsStore.ts  useWsUserStore.ts
front/src/util/: jwt.ts  ws.ts
glb/: basicBlock2.glb
nginx/: forchallenge.conf  nginx.dev.conf  nginx.prod.conf  readmd.md
(+28 files in other folders)
