[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "time",
] }

jsonwebtoken = "9.3.1"
nanoid = "0.4"
argon2 = "0.5.3"
base64 = "0.22"
hex = "0.4.3"
sha2 = "0.10.9"
oauth2 = "5.0.0"

config = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.3"


bb8 = "0.9.0"
bb8-redis = "0.23.0"
redis = { version = "0.32.0", features = ["tokio-comp"] }
redis-macros = "0.5.4"

tokio = { version = "1", features = ["full"] }

axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
hyper = { version = "1", features = ["full"] }
askama = "0.14.0"

validator = { version = "0.20", features = ["derive"] }


anyhow = "1"
thiserror = "2"


reqwest = { version = "0.12", features = ["json"] }
